--- a/.textlintrc.json
+++ b/.textlintrc.json
@@ -3,7 +3,14 @@
         "textlint-rule-no-dropping-the-ra": true,
         "preset-jtf-style": true,
         "ja-hiragana-fukushi": true,
-        "ja-hiragana-hojodoushi": true
+        "ja-hiragana-hojodoushi": true,
+        "ja-keishikimeishi": {
+            "detection_hou_kata": false,
+            "detection_ue": false
+        },
+        "@proofdict/proofdict": {
+            "dictURL": "https://rasshii.github.io/proof-dictionary/"
+        }
     },
     "filters": {
         "comments": true
