--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "homepage": "https://github.com/rasshii/original-text-lint#readme",
   "dependencies": {
+    "@proofdict/textlint-rule-proofdict": "^3.1.2",
     "textlint": "^14.2.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-ja-hiragana-daimeishi": "^1.0.0",
     "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
     "textlint-rule-ja-hiragana-hojodoushi": "^1.1.0",
+    "textlint-rule-ja-keishikimeishi": "^1.0.5",
     "textlint-rule-no-dropping-the-ra": "^3.0.0",
     "textlint-rule-preset-jtf-style": "^2.3.14"
   }
